--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <table>
                 <tr>
                     <td>
-                         &#963=
+                         &#963<sub>x</sub>
                     </td>
                     <td>
                         <input type="text"></input>
@@ -22,7 +22,7 @@
                 </tr>
                 <tr>
                     <td>
-                         &#963<sub>y</sub>=
+                         &#963<sub>y</sub>
                     </td>
                     <td>
                         <input type="text"></input>
@@ -30,13 +30,18 @@
                 </tr>
                 <tr>
                     <td>
-                        &Tau;<sub>xy</sub> =
+                        &Tau;<sub>xy</sub>
                     </td>
                     <td>
                         <input type="text"></input>
                     </td>
                 </tr>
             </table>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;
+            &nbsp;&nbsp;
+            &nbsp;&nbsp;
+            <input type="submit" id="view_button" value="Calculate">
            
         </form>
     </body>
