--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
         var x = document.getElementById("stress-x").value;
         var y = document.getElementById("stress-y").value;
         var z = document.getElementById("shear").value;
-        var sigma1, sigma2, thetaP, thetaS, shearMax;
+        var sigma1, sigma2, thetaP, thetaS, shearMax,mohrradius;
         //all fromulas here!!!
-        sigma1=((x+y)/2)+(Math.sqrt(Math.pow(((x-y)/2,2))+Math.pow(z,2)));
-        document.getElementById("pstress-1").innerHTML = x;
-        document.getElementById("pstress-2").innerHTML = y;
+        //mohrradius=Math.sqrt(Math.pow(((x-y)/2,2))+Math.pow(z,2));
+        mohrradius=Math.sqrt((x-y)*(x-y)/2+z*z);
+        sigma1=((x+y)/2)+mohrradius;
+        sigma2=((x+y)/2)-mohrradius;
+        document.getElementById("pstress-1").innerHTML = sigma1;
+        document.getElementById("pstress-2").innerHTML = sigma2;
         /*document.getElementById("pstress-1").innerHTML = sigma1;
         document.getElementById("pstress-2").innerHTML = sigma2;
         document.getElementById("pstress-1").innerHTML = sigma1;
