--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         v=(2*z)/(x-y);
         sigma1=((x+y)/2)+mohrradius;
         sigma2=((x+y)/2)-mohrradius;
-        thetaP=Math.atan(v)
+        thetaP=(Math.atan(v))/2;
         shearMax=(sigma1-sigma2)/2;
         document.getElementById("pstress-1").innerHTML = sigma1;
         document.getElementById("pstress-2").innerHTML = sigma2;
