--- a/index.html
+++ b/index.html
@@ -13,77 +13,79 @@
     </h1>
     <table id="mainbody">
         <tr>
-<td>
-    <img src="images/main_diagram.jpg" alt="Basic Diagram"></img>
-    <form id="user_input">
-        <table>
-            <tr>
-                <td>
-                    &#963<sub>x</sub>
-                </td>
-                <td>
-                    <input class="textbox" id="stress-x" type="text"></input>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    &#963<sub>y</sub>
-                </td>
-                <td>
-                    <input id="stress-y" class="textbox"  type="text"></input>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    &Tau;<sub>xy</sub>
-                </td>
-                <td>
-                    <input id="shear" class="textbox" type="text"></input>
-                </td>
-            </tr>
-        </table>
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;
-        &nbsp;&nbsp;
-        &nbsp;&nbsp;
-        <input type="submit" id="calculate_now" value="Calculate" onclick="calculate()">
+            <td>
+                <img src="images/main_diagram.jpg" alt="Basic Diagram"></img>
+                <form id="user_input">
+                    <table>
+                        <tr>
+                            <td>
+                                &#963<sub>x</sub>
+                            </td>
+                            <td>
+                                <input class="textbox" id="stress-x" type="text"></input>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                &#963<sub>y</sub>
+                            </td>
+                            <td>
+                                <input id="stress-y" class="textbox" type="text"></input>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                &Tau;<sub>xy</sub>
+                            </td>
+                            <td>
+                                <input id="shear" class="textbox" type="text"></input>
+                            </td>
+                        </tr>
+                    </table>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;
+                    &nbsp;&nbsp;
+                    &nbsp;&nbsp;
+                    <input type="submit" id="calculate_now" value="Calculate" onclick="calculate()">
 
-    </form>
-</td>
-    <td>
-        <p id="pstress-1"></p>
-        <p id="pstress-2"></p>
-        <p id="pthetap"></p>
-        <p id="pshearmax"></p>
-        </p>
-    </td>
+                </form>
+            </td>
+       
+            <td id="answerbox">
+                <p id="pstress-1"></p>
+                <p id="pstress-2"></p>
+                <p id="pthetap"></p>
+                <p id="pshearmax"></p>
+
+            </td>
         </tr>
     </table>
-   
+
     <script>
-         function calculate() {
-        event.preventDefault();
-        var x = document.getElementById("stress-x").value;
-        var y = document.getElementById("stress-y").value;
-        var z = document.getElementById("shear").value;
-        var sigma1, sigma2, thetaP, thetaS, shearMax,mohrradius,v;
-        //all fromulas here!!!
-        //mohrradius=Math.sqrt(Math.pow(((x-y)/2,2))+Math.pow(z,2));
-        mohrradius=Math.sqrt(((x-y)*(x-y)/4)+z*z);
-        v=(2*z)/(x-y);
-        sigma1=((x+y)/2)+mohrradius;
-        sigma2=((x+y)/2)-mohrradius;
-        thetaP=(Math.atan(v))/2;
-        shearMax=(sigma1-sigma2)/2;
-        document.getElementById("pstress-1").innerHTML = sigma1;
-        document.getElementById("pstress-2").innerHTML = sigma2;
-        document.getElementById("pshearmax").innerHTML = shearMax;
-        document.getElementById("pthetap").innerHTML = thetaP;
-        /*document.getElementById("pstress-1").innerHTML = sigma1;
-        document.getElementById("pstress-2").innerHTML = sigma2;*/
-    }
+        function calculate() {
+            event.preventDefault();
+            var x = document.getElementById("stress-x").value;
+            var y = document.getElementById("stress-y").value;
+            var z = document.getElementById("shear").value;
+            var sigma1, sigma2, thetaP, thetaS, shearMax, mohrradius, v;
+            //all fromulas here!!!
+            //mohrradius=Math.sqrt(Math.pow(((x-y)/2,2))+Math.pow(z,2));
+            mohrradius = Math.sqrt(((x - y) * (x - y) / 4) + z * z);
+            v = (2 * z) / (x - y);
+            sigma1 = ((x + y) / 2) + mohrradius;
+            sigma2 = ((x + y) / 2) - mohrradius;
+            thetaP = (Math.atan(v)) / 2;
+            shearMax = (sigma1 - sigma2) / 2;
+            document.getElementById("pstress-1").innerHTML = "The Maximum Principal Stress for this case is" + sigma1 + "N/mm^2";
+            document.getElementById("pstress-2").innerHTML = "The Minimum Principal Stress for this case is" + sigma2 + "N/mm^2";
+            document.getElementById("pshearmax").innerHTML = "The maximum shear stress is " + shearMax + "N/mm^2";
+            document.getElementById("pthetap").innerHTML = "The angle of principal planes is " + thetaP + "radians";
+            /*document.getElementById("pstress-1").innerHTML = sigma1;
+            document.getElementById("pstress-2").innerHTML = sigma2;*/
+        }
 
 
     </script>
 </body>
+
 </html>
