--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@ id="calculate_now" value="Calculate" onclick="calculate()" type="submit"> </form
                   <td>
                     <p> Max. Principal Stress </p>
                   </td>
-                  <td> <br>
+                  <td><p id="pstress-1"></p> <br>
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <p> Min. Principal Stress </p>
                   </td>
-                  <td> <br>
+                  <td><p id="pstress-2"></p> <br>
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <p> Max. Shear Stress </p>
                   </td>
-                  <td> <br>
+                  <td> <p id="pshearmax"></p><br>
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <p> Angle of Principal planes </p>
                   </td>
-                  <td> <br>
+                  <td><p id="pthetap"></p> <br>
                   </td>
                 </tr>
               </tbody>
@@ -81,7 +81,7 @@ id="calculate_now" value="Calculate" onclick="calculate()" type="submit"> </form
     </table>
     <script>
         var mohrradius;
-        var sigma1, sigma2, thetaP, thetaS, shearMax, v;
+        var sigma1, sigma2, thetaP, thetaS, shearMax, v, a,b,c,d,e,f;
         function calculate() {
             event.preventDefault();
             var x = document.getElementById("stress-x").value;
@@ -89,11 +89,17 @@ id="calculate_now" value="Calculate" onclick="calculate()" type="submit"> </form
             var z = document.getElementById("shear").value;
 
             //all fromulas here!!!
-            mohrradius = Math.sqrt(((x - y) * (x - y) / 4) + z * z);
+            d=(x+y)/2;
+            f=(x-d);
+            e=f*f;
+            a=(f+ (z * z));
+            b=(x + y) / 2;
+            mohrradius = Math.sqrt(a);
             v = (2 * z) / (x - y);
-            sigma1 = ((x + y) / 2) + mohrradius;
-            sigma2 = ((x + y) / 2) - mohrradius;
-            thetaP =(Math.atan(v)) / 2;
+            c=Math.atan(v);
+            sigma1 = (d + mohrradius);
+            sigma2 = (d - mohrradius);
+            thetaP =(c) / 2;
             shearMax = (sigma1 - sigma2) / 2;
             document.getElementById("pstress-1").innerHTML = sigma1 + " N/mm^2";
             document.getElementById("pstress-2").innerHTML = sigma2 + " N/mm^2";
