error code solved

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
               <table>
                 <tbody>
                   <tr>
-                    <td> ?<sub>x</sub> </td>
+                    <td> &#963;<sub>x</sub> </td>
                     <td> <input class="textbox" id="stress-x" type="number">
                     </td>
                   </tr>
                   <tr>
-                    <td> ?<sub>y</sub> </td>
+                    <td> &#963;<sub>y</sub> </td>
                     <td> <input id="stress-y" class="textbox" type="number"> </td>
                   </tr>
                   <tr>
-                    <td> ?<sub>xy</sub> </td>
+                    <td> &#932;<sub>xy</sub> </td>
                     <td> <input id="shear" class="textbox" type="number"> </td>
                   </tr>
                 </tbody>
