--- a/index.html
+++ b/index.html
@@ -1,94 +1,99 @@
 <html>
-  <head>
+
+<head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title> Principal Stresses </title>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  <body class="fullbody">
+</head>
+
+<body class="fullbody">
     <h1 id="heading"> Welcome to Principal Stress Calculator </h1>
     <table id="mainbody">
-      <tbody>
-        <tr>
-            <td class="left">
-                <img src="images/main_diagram.jpg" alt="Basic Diagram" style="width: 391px; height: 385px;">
-                <form id="user_input">
-                    <table>
-                        <tr>
-                            <td class="name"> &#963;<sub>x</sub> </td>
-                            <td> <input class="textbox" id="stress-x" type="text"> </td>
-                        </tr>
-                        <tr>
-                            <td class="name"> &#963;<sub>y</sub> </td>
-                            <td> <input id="stress-y" class="textbox" type="text"> </td>
-                        </tr>
-                        <tr>
-                            <td class="name"> &#932;<sub>xy</sub> </td>
-                            <td> <input id="shear" class="textbox" type="text"> </td>
-                        </tr>
-                    </table>
-                    &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
-                    <input id="calculate_now" value="Calculate" onclick="calculate()" type="submit">
-                </form>
-            </td>
-            <td class="right">
-                <table>
-                    <tr>
-                        <!--for drawing circle-->
-                        <canvas id="myCanvas" height="500px" width="900px"></canvas>
-                    </tr>
-                    <tr>
-                        <!--for showing answer-->
-                        <table id="answertable">
+        <tbody>
+            <tr>
+                <td class="left">
+                    <img src="images/main_diagram.jpg" alt="Basic Diagram" style="width: 391px; height: 385px;">
+                    <form id="user_input">
+                        <table>
                             <tr>
-                                <td>
-                                    <p>
-                                        Max. Principal Stress
-                                    </p>
-                                </td>
-                                <td>
-                                    <p id="pstress-1"></p>
-                                </td>
+                                <td class="name"> &#963;<sub>x</sub> </td>
+                                <td> <input class="textbox" id="stress-x" type="text"> </td>
                             </tr>
                             <tr>
-                                <td>
-                                    <p>
-                                        Min. Principal Stress
-                                    </p>
-                                </td>
-                                <td>
-                                    <p id="pstress-2"></p>
-                                </td>
+                                <td class="name"> &#963;<sub>y</sub> </td>
+                                <td> <input id="stress-y" class="textbox" type="text"> </td>
                             </tr>
                             <tr>
-                                <td>
-                                    <p>
-                                        Max. Shear Stress
-                                    </p>
-                                </td>
-                                <td>
-                                    <p id="pshearmax"></p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p>
-                                        Angle of Principal planes
-                                    </p>
-                                </td>
-                                <td>
-                                    <p id="pthetap"></p>
-                                </td>
+                                <td class="name"> &#932;<sub>xy</sub> </td>
+                                <td> <input id="shear" class="textbox" type="text"> </td>
                             </tr>
                         </table>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-      </tbody>
+                        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+                        <input id="calculate_now" value="Calculate" onclick="calculate()" type="submit">
+                    </form>
+                </td>
+                <td class="right">
+                    <table>
+                        <tr>
+                            <!--for drawing circle-->
+                            <canvas id="myCanvas" height="500px" width="900px"></canvas>
+                        </tr>
+                        <tr>
+                            <!--for showing answer-->
+                            <table id="answertable">
+                                <tr>
+                                    <td>
+                                        <p>
+                                            Max. Principal Stress
+                                        </p>
+                                    </td>
+                                    <td>
+                                        <p id="pstress-1"></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>
+                                            Min. Principal Stress
+                                        </p>
+                                    </td>
+                                    <td>
+                                        <p id="pstress-2"></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>
+                                            Max. Shear Stress
+                                        </p>
+                                    </td>
+                                    <td>
+                                        <p id="pshearmax"></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>
+                                            Angle of Principal planes
+                                        </p>
+                                    </td>
+                                    <td>
+                                        <p id="pthetap"></p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </tbody>
     </table>
+    <footer>
+        Made with ❤️ in India.
+    </footer>
     <script>
         var mohrradius;
-        var sigma1, sigma2, thetaP, thetaS, shearMax, v, a,b,c,d,e,f;
+        var sigma1, sigma2, thetaP, thetaS, shearMax, v, a, b, c, d, e, f;
         function calculate() {
             event.preventDefault();
             var x = document.getElementById("stress-x").value;
@@ -98,11 +103,11 @@
             y = parseFloat(y);
             z = parseFloat(z);
             //all fromulas here!!!
-            d=(x+y)/2;
-            f=(x-d);
-            e=f*f;
-            a=(e+ (z * z));
-            b=(x + y) / 2;
+            d = (x + y) / 2;
+            f = (x - d);
+            e = f * f;
+            a = (e + (z * z));
+            b = (x + y) / 2;
             mohrradius = Math.sqrt(a);
             v = (2 * z) / (x - y);
             sigma1 = ((x + y) / 2) + mohrradius;
@@ -121,34 +126,40 @@
             var c_circ = document.getElementById("myCanvas");
 
             var ctx_circ = c_circ.getContext("2d");
+
             ctx_circ.clearRect(0, 0, c_circ.width, c_circ.height);
+            
             var radius = radius;
             ctx_circ.beginPath();
-            ctx_circ.arc(450+(sigma1 + sigma2) / 2, 250, 100, 0, 2 * Math.PI);
+            ctx_circ.arc(450 + (sigma1 + sigma2) / 2, 250, 100, 0, 2 * Math.PI);
+            ctx_circ.strokeStyle = "red";
             ctx_circ.stroke();
+   
         }
         function drawline() {
             var canvas = document.getElementById("myCanvas");
             var ctx_x = canvas.getContext("2d");
+            ctx_x.strokeStyle = "black";
             ctx_x.moveTo(450, 0);
             ctx_x.lineTo(450, 900);
             ctx_x.stroke();
+
             ctx_x.moveTo(0, 250);
             ctx_x.lineTo(900, 250);
             ctx_x.stroke();
             r = 100;
             theta = thetaP * 2;
-            ctx_x.moveTo(450+(sigma1 + sigma2) / 2, 250);
-            ctx_x.lineTo(450+(sigma1 + sigma2) / 2 + 100 * Math.cos(theta), 250 + r * Math.sin(theta));
+            ctx_x.moveTo(450 + (sigma1 + sigma2) / 2, 250);
+            ctx_x.lineTo(450 + (sigma1 + sigma2) / 2 + 100 * Math.cos(theta), 250 + r * Math.sin(theta));
             ctx_x.stroke();
-            ctx_x.moveTo(450+ (sigma1 + sigma2) / 2, 250);
-            ctx_x.lineTo(450+ (sigma1 + sigma2) / 2 - 100 * Math.cos(theta), 250 - r * Math.sin(theta));
+            ctx_x.moveTo(450 + (sigma1 + sigma2) / 2, 250);
+            ctx_x.lineTo(450 + (sigma1 + sigma2) / 2 - 100 * Math.cos(theta), 250 - r * Math.sin(theta));
             ctx_x.stroke();
             ctx_x.font = "30px Comic Sans MS";
             ctx_x.fillStyle = "red";
-            ctx_x.fillText("longitudinal stress", 644,245);
-            ctx_x.fillText("shear stress", 450,100);
-                 }
+            ctx_x.fillText("longitudinal stress", 644, 245);
+            ctx_x.fillText("shear stress", 450, 100);
+        }
         function radians_to_degrees(radians) {
             var pi = Math.PI;
             return radians * (180 / pi);
@@ -156,5 +167,6 @@
 
 
     </script>
-  </body>
+</body>
+
 </html>
