--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 
 <body class="fullbody">
     <h1 id="heading"> Welcome to Principal Stress Calculator </h1>
+    <h3 class="ins">In this Calculator you will be able to Calculate Principal Stresses,Maximum Shear stress, Principal Plane angle w.r.t. given plane.</h3>
+    <h3 class="ins">You will be also able to visualise orientation of mohr's circle in this calculator.</h3>
     <table id="mainbody">
         <tbody>
             <tr>
                 <td class="left">
                     <img src="images/main_diagram.jpg" alt="Basic Diagram" style="width: 391px; height: 385px;">
+                    <p>Enter Values of Stresses shown in this diagram.</p>
                     <form id="user_input">
                         <table>
                             <tr>
