style background changed

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 
 <body class="fullbody">
-    <h1 id="heading"> Welcome to Principal Stress Calculator </h1>
+    <h1 id="heading"> Welcome to Principal Stress Calculator </h1><hr width="50%">
     <h3 class="ins">In this Calculator you will be able to Calculate Principal Stresses,Maximum Shear stress, Principal Plane angle w.r.t. given plane.</h3>
     <h3 class="ins">You will be also able to visualise orientation of mohr's circle in this calculator.</h3>
     <table id="mainbody">
         <tbody>
             <tr>
                 <td class="left">
-                    <img src="images/main_diagram.jpg" alt="Basic Diagram" style="width: 391px; height: 385px;">
+                    <img src="images/main_diagram.png" alt="Basic Diagram" style="width: 391px; height: 385px;">
                     <p>Enter Values of Stresses shown in this diagram.</p>
                     <form id="user_input">
                         <table>
@@ -43,44 +43,44 @@
                         </tr>
                         <tr>
                             <!--for showing answer-->
-                            <table id="answertable">
+                            <table class="answertable">
                                 <tr>
                                     <td>
                                         <p>
-                                            Max. Principal Stress
+                                            Max. Principal Stress :
                                         </p>
                                     </td>
-                                    <td>
+                                    <td class="ab">
                                         <p id="pstress-1"></p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p>
-                                            Min. Principal Stress
+                                            Min. Principal Stress :
                                         </p>
                                     </td>
-                                    <td>
+                                    <td class="ab">
                                         <p id="pstress-2"></p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p>
-                                            Max. Shear Stress
+                                            Max. Shear Stress:
                                         </p>
                                     </td>
-                                    <td>
+                                    <td class="ab">
                                         <p id="pshearmax"></p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p>
-                                            Angle of Principal planes
+                                            Angle of Principal planes:
                                         </p>
                                     </td>
-                                    <td>
+                                    <td class="ab">
                                         <p id="pthetap"></p>
                                     </td>
                                 </tr>
