--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <tr>
                 <td class="left">
                     <img src="images/main_diagram.png" alt="Basic Diagram" style="width: 391px; height: 385px;">
-                    <p>Enter Values of Stresses shown in this diagram.</p>
+                    <p id="dothis">Enter Values of Stresses shown in this diagram.</p>
                     <form id="user_input">
                         <table>
                             <tr>
@@ -50,7 +50,7 @@
                                             Max. Principal Stress :
                                         </p>
                                     </td>
-                                    <td class="ab">
+                                    <td>
                                         <p id="pstress-1"></p>
                                     </td>
                                 </tr>
@@ -60,7 +60,7 @@
                                             Min. Principal Stress :
                                         </p>
                                     </td>
-                                    <td class="ab">
+                                    <td>
                                         <p id="pstress-2"></p>
                                     </td>
                                 </tr>
@@ -70,7 +70,7 @@
                                             Max. Shear Stress:
                                         </p>
                                     </td>
-                                    <td class="ab">
+                                    <td>
                                         <p id="pshearmax"></p>
                                     </td>
                                 </tr>
@@ -80,7 +80,7 @@
                                             Angle of Principal planes:
                                         </p>
                                     </td>
-                                    <td class="ab">
+                                    <td>
                                         <p id="pthetap"></p>
                                     </td>
                                 </tr>
